# SourcetrailDB

./: .gitignore
resources_rust/: Cargo.toml  build.rs  wrapper.hpp
resources_rust/src/: lib.rs
