[package]
name = "sourcetraildb"
version = "0.1.0"
authors = ["champii"]
edition = "2018"
# crate-type = "lib"
# links = "sourcetraildb"
# [lib]
# crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.51.0"
